--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,51 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GitHub Clone (Basic Git)</title>
+    <title>CodeProject Editor</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <style>
+      .material-symbols-outlined {
+        font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+      }
+      .syntax-keyword { color: #569CD6; }
+      .syntax-function { color: #DCDCAA; }
+      .syntax-string { color: #CE9178; }
+      .syntax-comment { color: #6A9955; }
+      .syntax-number { color: #B5CEA8; }
+      .syntax-punctuation { color: #D4D4D4; }
+      .syntax-variable { color: #9CDCFE; }
+    </style>
+    <script id="tailwind-config">
+      tailwind.config = {
+        darkMode: "class",
+        theme: {
+          extend: {
+            colors: {
+              "primary": "#135bec",
+              "background-light": "#f6f6f8",
+              "background-dark": "#101622",
+              "surface-dark": "#18202F",
+              "border-dark": "#232f48",
+              "text-primary-dark": "#E0E0E0",
+              "text-secondary-dark": "#92a4c9",
+            },
+            fontFamily: {
+              "display": ["Space Grotesk", "sans-serif"],
+              "mono": ["Roboto Mono", "monospace"]
+            },
+            borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
+          },
+        },
+      }
+    </script>
   </head>
-  <body>
+  <body class="bg-background-dark font-display text-text-primary-dark">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
