--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,13 +13,6 @@
       .material-symbols-outlined {
         font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
       }
-      .syntax-keyword { color: #569CD6; }
-      .syntax-function { color: #DCDCAA; }
-      .syntax-string { color: #CE9178; }
-      .syntax-comment { color: #6A9955; }
-      .syntax-number { color: #B5CEA8; }
-      .syntax-punctuation { color: #D4D4D4; }
-      .syntax-variable { color: #9CDCFE; }
     </style>
     <script id="tailwind-config">
       tailwind.config = {
@@ -34,6 +27,8 @@
               "border-dark": "#232f48",
               "text-primary-dark": "#E0E0E0",
               "text-secondary-dark": "#92a4c9",
+              "panel-light": "#ffffff",
+              "panel-dark": "#1a2233"
             },
             fontFamily: {
               "display": ["Space Grotesk", "sans-serif"],
